2007-08-29  Don Allingham  <don@gramps-project.org>
	* src/GrampsDb/_GrampsDBDir.py: fast unserialize()
	* src/Editors/_EditPerson.py: fast unserialize()
	* src/RelLib/_SourceBase.py: fast unserialize()
	* src/RelLib/_Source.py: fast unserialize()
	* src/RelLib/_MediaObject.py: fast unserialize()
	* src/RelLib/_Person.py: fast unserialize()
	* src/RelLib/_DateBase.py: fast unserialize()
	* src/RelLib/_ChildRef.py: fast unserialize()
	* src/RelLib/_Name.py: fast unserialize()
	* src/RelLib/_Family.py: fast unserialize()
	* src/RelLib/_Place.py: fast unserialize()
	* src/RelLib/_RepoRef.py: fast unserialize()
	* src/RelLib/_Note.py: fast unserialize()
	* src/RelLib/_EventRef.py: fast unserialize()
	* src/RelLib/_Repository.py: fast unserialize()
	* src/RelLib/_Event.py: fast unserialize()
	* src/Utils.py: all callgraph to profile
	
2007-08-29  Benny Malengier <benny.malengier@gramps-project.org> 
	* src/ReportBase/_Constants.py: quick reports constants
	* src/PluginUtils/__init__.py : add quick reports
	* src/PluginUtils/_Plugins.py : add quick reports
	* src/PluginUtils/_PluginMgr.py: allow registering of quick reports, 
	remove assignments of global var
	* src/plugins/all_events.py   : register as quick report
	* src/plugins/siblings.py     : register as quick report
	* src/QuickReports.py         : construction of quick report GUI 
	and callbacks
	* src/Makefile.am             : Add QuickReports.py
	* po/POTFILES.in              : Add QuickReports.py
	* src/Editors/_EditPerson.py  : use QuickReports.py for quick report popup
	* src/DataViews/_PersonView.py: use QuickReports.py for quick report popup
	* src/ManagedWindow.py        : add init of attribute

2007-08-29  Benny Malengier <bm@cage.ugent.be> 
	* src/Editors/_EditNote.py     : ManagedWindow error, bad naming in menu
	* src/Editors/_EditMediaRef.py : Bad naming in menu
	* src/DisplayTabs/_NoteTab.py  : ManagedWindow error, bad track
	* src/Editors/_EditReference.py: Always give an id to ManagedWindow